<resources>
    <string name="app_name">BuyNLarge</string>
    <string name="happiness_is_what_we_sell_that_s_why_everyone_loves_bnl">Happiness is what we sell!\nThat\'s why everyone loves BnL!</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="register">Register</string>
    <string name="no_logs_yet">No logs yet</string>
    <string name="orders">Orders</string>
    <string name="logout">Logout user?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="administrator_settings">Administrator Settings</string>
    <string name="view_items">View Items</string>
    <string name="view_users">View Users</string>
    <string name="users_spinner_elements">dropDownMenuExample</string>
    <string name="delete_user">Delete User</string>
    <string name="delete_item">Delete Item</string>
    <string name="add_item">Add Item</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="description">Description</string>
    <string name="new_item">New Item</string>
    <string name="welcome_username">Welcome %s!</string>
    <string name="buy">Buy</string>
    <string name="cancel_order">Cancel Order</string>
    <string-array name="users">
        <item></item>
        <item>C++</item>
        <item>Java</item>
        <item>JavaScript</item>
        <item>VisualBasic</item>
    </string-array>

</resources>